[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle-trader-pro"
version = "0.6.0"
description = "Portfolio Turtle Trading with A-share rules and portfolio-live (--use_closed)."
authors = [{name="ChatGPT"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
yahoo = ["yfinance>=0.2.40"]
china = ["efinance>=0.5.0"]
cal = ["pandas_market_calendars>=4.4.0"]

[project.scripts]
turtle-backtest = "turtletrader.cli:main"
